# CMakePractice

./: README.md
Episode002/src/: CMakeLists.txt  main.cpp
Episode003/source/: CMakeLists.txt
Episode003/src/: main.cpp
Episode004/source/: CMakeLists.txt
Episode004/src/: CMakeLists.txt  main.cpp
Episode005/: CMakeLists.txt  main.cpp
Episode005/source/include/: timer.hpp
Episode005/source/src/: timer.cpp
Episode005/src/: timer.cpp
